--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,17 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.7</version>
+        <version>2.7.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>inc.evil.spring.tx.management</groupId>
     <artifactId>spring-declarative-tx-management</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>spring-declarative-tx-management</name>
-    <description>spring-declarative-tx-management</description>
+    <name>bootiful-testing-with-testcontainers</name>
+    <description>bootiful-testing-with-testcontainers</description>
     <properties>
         <java.version>17</java.version>
+        <testcontainers.version>1.16.2</testcontainers.version>
     </properties>
     <dependencies>
         <dependency>
@@ -48,7 +49,28 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers-bom</artifactId>
+                <version>${testcontainers.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
