Added more tests

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,3 @@
-#DataSource properties
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring-declarative-tx-db
-
 #Jpa properties
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
@@ -18,3 +13,5 @@ logging.level.inc.evil=debug
 spring.main.allow-bean-definition-overriding=true
 
 spring.main.allow-circular-references=true
+
+#spring.datasource.url=jdbc:tc:postgresql:13.3:///integration-tests-db?TC_DAEMON=true
