--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,15 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>inc.evil.spring.tx.management</groupId>
-    <artifactId>spring-declarative-tx-management</artifactId>
+    <artifactId>doctor-appointments</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>bootiful-testing-with-testcontainers</name>
     <description>bootiful-testing-with-testcontainers</description>
     <properties>
         <java.version>17</java.version>
         <testcontainers.version>1.16.2</testcontainers.version>
+        <testcontainers.localstack.version>1.17.5</testcontainers.localstack.version>
+        <aws.java.s3.version>1.12.331</aws.java.s3.version>
     </properties>
     <dependencies>
         <dependency>
@@ -51,6 +53,11 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>${aws.java.s3.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
@@ -58,6 +65,12 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>localstack</artifactId>
+            <version>${testcontainers.localstack.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
