Added localstack example

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,17 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.flyway.enabled=true
 
+cloud.aws.region.static=eu-central-1
+cloud.aws.stack.auto=false
+cloud.aws.stack.enabled=false
+cloud.aws.credentials.secretKey=ABC
+cloud.aws.credentials.accessKey=XYZ
+
+appointments.queue-name=appointments
+appointments.bucket-name=appointments
+
+spring.jackson.serialization.write_dates_as_timestamps=false
+
 #Logging properties
 logging.level.org.springframework.orm.jpa=debug
 logging.level.inc.evil=debug
